MediatR, login, jwt token

--- a/ReportingService/appsettings.json
+++ b/ReportingService/appsettings.json
@@ -10,5 +10,5 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=reportdb;Username=postgres;Password=zwow6hw5"
   },
   "AllowedHosts": "*",
-  "TokenKey": "SuperSecretKey"
+  "TokenKey": "this is my custom Secret key for authentication"
 }
