--- a/RepotringService.BLL/RepotringService.BLL.csproj
+++ b/RepotringService.BLL/RepotringService.BLL.csproj
@@ -8,11 +8,17 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.1.0" />
+    <PackageReference Include="IronXL.Excel" Version="2022.6.6825" />
+    <PackageReference Include="itext7" Version="7.2.3" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.10.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Fonts\FreeSans.ttf" />
   </ItemGroup>
 
   <ItemGroup>
